[package]
name = "hydrabadger"
version = "0.1.0"
authors = ["c0gent <nsan1129@gmail.com>"]
autobins = false

# [[bin]]
# name = "simulation"
# path = "src/bin/simulation.rs"

[[bin]]
name = "peer_node"
path = "src/bin/peer_node.rs"

[dependencies]
log = "*"
env_logger = "*"
clap = "*"
failure = "*"
crossbeam = "*"
crossbeam-channel = "*"
chrono = "*"
rust-crypto = "*"
num-traits = "*"
num-bigint = "*"
colored = "*"
itertools = "*"
pairing = "*"
rand = "0.4.2"
serde = "*"
serde_bytes = "*"
serde_derive = "*"
signifix = "*"
futures = "0.1"
tokio = "0.1.7"
tokio-codec = "*"
tokio-io = "*"
bincode = "*"
tokio-serde = "*"
tokio-serde-bincode = "*"
bytes = "*"
uuid = { version = "0.6", features = ["v4", "serde"] }
byteorder = "*"
parking_lot = "*"
clear_on_drop = "*"

[dependencies.hbbft]
version = "*"
# git = "https://github.com/c0gent/hbbft"
git = "https://github.com/poanetwork/hbbft"
# branch = "master"
branch = "afck-queue-fields"
# path = "../hbbft"
# features = ["serialization-protobuf"]