[package]
name = "hydrabadger"
version = "0.1.0"
authors = ["c0gent <nsan1129@gmail.com>"]
autobins = false
edition = "2018"

# [[bin]]
# name = "simulation"
# path = "src/bin/simulation.rs"

[[bin]]
name = "peer_node"
path = "src/bin/peer_node.rs"

[features]
# Used for debugging memory usage.
exit_upon_epoch_1000 = []
# Disables SIMD in reed-solomon-erasure, which currently doesn't work on Android.
no-simd = ["hbbft/no-simd"]


[dependencies]
log = "0.4"
# env_logger = "*"
env_logger = "0.5"
clap = "2"
failure = "0.1"
crossbeam = "0.4"
crossbeam-channel = "0.2"
chrono = "0.4"
rust-crypto = "*"
num-traits = "*"
num-bigint = "*"
colored = "*"
itertools = "*"
pairing = "*"
rand = "0.4.2"
serde = "1"
serde_bytes = "~0.10.4"
serde_derive = "1"
signifix = "0.9"
futures = "0.1"
tokio = "~0.1.13"
tokio-codec = "~0.1.1"
tokio-io = "~0.1.9"
bincode = "1"
tokio-serde = "0.2"
tokio-serde-bincode = "0.1"
bytes = "~0.4.10"
uuid = { version = "0.6", features = ["v4", "serde"] }
byteorder = "1"
parking_lot = "0.6"
clear_on_drop = "0.2"

[dependencies.hbbft]
version = "*"
# git = "https://github.com/c0gent/hbbft"
git = "https://github.com/poanetwork/hbbft"
# branch = "master"
rev = "ceb416a6"
# path = "../hbbft"

[profile.release]
debug = true
debug-assertions = true
